# OpenTaker

./: .gitignore
code/: Makefile.am  autogen.sh  common.am  configure.ac  install-libs.sh
code/conf/: env_win.bat  post_build_event.bat
code/inc/common/: aio_.h  auto_ptr.hxx  block_file.h  code_convert.h  common.h  def.h  device.h  err_code.h  file.h  file_pool.h  file_pool_linux.hxx  file_pool_win32.hxx  file_system.h  fixsize_buffer.h  log.h  lua_.h  math_.h  mutex.h  mutex_i.h  numa_.h  object_buffer.h  object_buffer.hxx  platform.h  platform_linux.h  platform_win32.h  postgres_db.h  share_memory.hxx  share_memory_linux.hxx  share_memory_win32.hxx  sqlite_.h  stdString.h  string_.h  system_.h  thread.h  thread_pool.h  time_.h  util.hxx  var.h
code/inc/network/: chang_qian.h  decode_basic.h  inetaddr.h  net_util.h  ntp.h  protocol.h  protocol_header_l4.h  socket_base.h
code/inc/share/: packet_ring.h  packet_ring_class.h  structure.h
code/script/: all_in_one.make
code/sln/: OpenTaker.sln
code/sln/CarMan/src/: global.h  version.h
code/sln/ChangQian/: ChangQian.vcxproj  ChangQian.vcxproj.filters  Makefile.am
code/sln/ChangQian/src/: main.cpp  version.h
code/sln/ChangQian/src/network/: decode_basic.cpp  decode_basic.h  igmp.cpp  inetaddr.cpp  net_util.cpp  ntp.cpp  socket_base.cpp  socket_tcp.cpp  socket_udp.cpp
code/sln/ChangQian/src/snmp/: pdu.h
code/sln/Exercise/src/: main.cpp  version.h
code/sln/LiangZhu/: LiangZhu.vcxproj  LiangZhu.vcxproj.filters  Makefile.am
code/sln/LiangZhu/src/: main.cpp
code/sln/LiangZhu/src/common/: aio_.cpp  auth_context.h  block_file.cpp  code_convert.cpp  common.cpp  file.cpp  file_pool.cpp  file_system.cpp  log.cpp  lua_.cpp  math_.cpp  mutex.cpp  numa_.cpp  platform_linux.cpp  platform_win32.cpp  postgres_db.cpp  sqlite_.cpp  string_.cpp  system_.cpp  thread.cpp  thread_pool.cpp  time_.cpp  var.cpp  version.h
code/sln/OpenTaker/: Makefile.am  OpenTaker.vcxproj  OpenTaker.vcxproj.filters
code/sln/OpenTaker/OpenTaker/: OpenTaker.vcxproj  OpenTaker.vcxproj.filters
code/sln/OpenTaker/OpenTaker/src/: version.h
code/sln/OpenTaker/src/: block_capture.cpp  block_capture.h  capture.cpp  capture.h  capture_file.h  capture_store.cpp  capture_store.h  global.cpp  global.h  main.cpp  pcap_capture.cpp  pcap_capture.h  pcap_file.cpp  pcap_file.h  pcap_file2.cpp  pcap_file2.h  pcap_file2_linux.hxx  pcap_file2_win32.hxx  pcap_file_fake.cpp  pcap_file_fake.h  pcap_file_linux.hxx  pcap_file_win32.hxx  raw_db.h  storage.cpp  storage.h  virtual_capture.cpp  virtual_capture.h
code/sln/PacketRay/: Makefile.am  PacketRay.vcxproj  PacketRay.vcxproj.filters
code/sln/PacketRay/src/: app_base.h  packet_ray.cpp  packet_ray.h  pipeline_manager.cpp  pipeline_manager.h  pipeline_task.cpp  pipeline_task.h  version.h
code/sln/PacketRing/: Makefile.am  PacketRing.vcxproj  PacketRing.vcxproj.filters
code/sln/PacketRing/src/: main_linux.hxx  main_win32.hxx  packet_ring.cpp  packet_ring_class.cpp  pcap_file_linux.hxx  pcap_file_win32.hxx  version.h
code/unitTest/UT_ChangQian/: Makefile.am  UT_ChangQian.vcxproj  UT_ChangQian.vcxproj.filters
code/unitTest/UT_ChangQian/src/: global.cpp  main.cpp  version.h
code/unitTest/UT_ChangQian/src/test/: inetaddr_ut.cpp  socket_base_ut.cpp
code/unitTest/UT_LiangZhu/: Makefile.am  UT_LiangZhu.vcxproj  UT_LiangZhu.vcxproj.filters
code/unitTest/UT_LiangZhu/src/: global.cpp  global.h  main.cpp  version.h
code/unitTest/UT_LiangZhu/src/test/: collection_ut.cpp  file_system_ut.cpp  file_ut.cpp  lua_ut.cpp  math_ut.cpp  packet_ring_ut.cpp  packet_ring_ut.pp  string_ut.cpp  system_ut.cpp  variant_ut.cpp
