AUTOMAKE_OPTIONS = foreign subdir-objects
noinst_LIBRARIES = libChangQian.a

include $(top_srcdir)/common.am

libChangQian_a_SOURCES = src/main.cpp 		\
			src/network/decode_basic.cpp	\
			src/network/igmp.cpp			\
			src/network/inetaddr.cpp		\
			src/network/socket_base.cpp		\
			src/network/socket_tcp.cpp		\
			src/network/socket_udp.cpp		

 
