AUTOMAKE_OPTIONS = foreign subdir-objects
include $(top_srcdir)/build/common.am

noinst_LIBRARIES = libChangQian.a

libChangQian_a_SOURCES = src/main.cpp 		\
			src/network/decode_basic.cpp	\
			src/network/igmp.cpp			\
			src/network/inetaddr.cpp		\
			src/network/net_util.cpp		\
			src/network/socket_base.cpp		\
			src/network/socket_tcp.cpp		\
			src/network/socket_udp.cpp		

 
